--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -60,6 +60,7 @@
     "tab-management-structures": "Structures",
     "tab-management-stats": "Stats",
     "tab-management-destroy": "Destroy",
+    "tab-management-hire": "Hire",
     "management-destroy-village-text": "Are you sure to permanently destroy this village?",
     "management-destroy-village-button": "Destroy village",
     "management-update-village-button": "Upate village",
@@ -74,6 +75,15 @@
     "management-remove-villager": "Remove villager",
     "management-villager-note": "Name: {0}\nProfession: {1}\nLast seen at: {2}\nWorks at: {3}\nSleeps at: {4}",
     "management-emtpy": "The village seems to be empty.",
+    "management-hire-farmer": "Hire farmer",
+    "management-hire-shepherd": "Hire shepherd",
+    "management-hire-trader": "Hire trader",
+    "management-hire-smith": "Hire smith",
+    "management-hire-soldier": "Hire soldier",
+    "management-hire-herbalist": "Hire herbalist",
+    "management-hire-mayor": "Hire mayor",
+    "management-hire-archer": "Hire archer",
+
     "lives-in": "Resident of {0}.\nWorks at: {1}\nSleeps at: {2}",
     "nowhere": "nowhere",
     "resides-in": "Belongs to {0}.",
