This would have been easier if linq could do full outer joins

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -83,6 +83,15 @@
     "management-hire-herbalist": "Hire herbalist",
     "management-hire-mayor": "Hire mayor",
     "management-hire-archer": "Hire archer",
+    "management-poi-stats": "This village has a total of <strong>{0} beds</strong>, <strong>{1} workstations</strong> and <strong>{2} gatherplaces</strong>.\nIt's the residence of <strong>{3} villagers</strong>.\nThe villagers and workstations are split up the following way:\n",
+    "management-profession-stats": "Profession: <strong>{0}</strong>\t Villagers: {1}\t Workstations: {2}\n",
+    "management-profession-farmer": "farmer",
+    "management-profession-shepherd": "shepherd",
+    "management-profession-trader": "trader",
+    "management-profession-smith": "smith",
+    "management-profession-soldier": "soldier",
+    "management-profession-herbalist": "herbalist",
+    "management-profession-mayor": "mayor",
 
     "lives-in": "Resident of {0}.\nWorks at: {1}\nSleeps at: {2}",
     "nowhere": "nowhere",
