--- a/resources/assets/vsvillage/lang/ru.json
+++ b/resources/assets/vsvillage/lang/ru.json
@@ -35,6 +35,7 @@
     "itemdesc-villagerhorn": "Используется для призыва Старосты поселения, с целью основать новое поселение(если установлен VSQuest)",
     "interact-villager-horn": "Зажмите правой кнопкой мыши по земле по близости, чтобы призывать на этом месте Старосту(при наличии VSQuest).",
     "villagerguide-title": "Поселения и Поселенцы",
+    "villagerguide-text": "<strong>Поселения и Поселенцы</strong>\n\nПутешествуя по миру, вы начнёте встречать поселения. В поселениях вы встретите людей, которые обычно дружелюбны, если их не провоцировать. Некоторые будут торговать с вами, другие смогут защитить вас от врагов. Большинство из них будут выполнять небольшие задачи в течение дня в зависимости от их профессии.\n\nТак же вы сможете основать собственное поселение, для этого вам понадобится <a href=\"handbook://item-vsvillage:villagerhorn\">Рог Призыва</a>, чтобы вызвать деревенского торговца. Он продает предметы, которые понадобятся вашим жителям: рабочие станции, кровати и жаровню, вокруг которой можно собираться. Рабочую станцию старосты нужно купить в первую очередь.\n\n Если у вас установлен мод <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a>, вы сможете выполнять задания жителей деревни. \n\nПоселенцы, призываемые вами, нуждаются в вашей помощи и поддержке. Поселенцы хотят спать по ночам в кровати, а так же работать на <a href=\"handbooksearch://workstation\">Рабочих станциях</a>, чтобы не бездельничать днём. Ваши поселенцы также будут собираться вокруг <a href=\"handbook://block-vsvillage:brazier-extinct\">Костровища</a> по вечерам, чтобы пообщаться.",
     "block-workstation-soldier-*": "Рабочая Станция Дружины",
     "block-workstation-smith-*": "Рабочая Станция Кузнеца",
     "block-workstation-farmer-*": "Рабочая Станция Крестьянина",
@@ -42,9 +43,53 @@
     "block-workstation-herbalist-*": "Рабочая Станция Травника",
     "block-workstation-mayor-*": "Рабочая Станция Старосты",
     "block-workstation-trader-*": "Рабочая Станция Торговца",
+    "block-villagebed-*": "Кровать поселенца",
     "block-brazier-*": "Костровище",
+    "block-waypoint": "Путевая точка",
     "command-stay": "Стой здесь!",
     "command-follow": "Следуй за мной!",
+    "manage-village": "Управление поселением",
+    "management-title": "Управление поселением",
+    "tab-management-residents": "Жители",
+    "tab-management-structures": "Строения",
+    "tab-management-stats": "Статистика",
+    "tab-management-destroy": "Разрушить",
+    "tab-management-hire": "Нанять",
+    "management-destroy-village-text": "Вы уверены, что хотите разрушить поселение?",
+    "management-destroy-village-button": "Разрушить поселение",
+    "management-update-village-button": "Улучшить поселение",
+    "management-village-name": "Название:",
+    "management-village-radius": "Радиус:",
+    "management-found-new-village": "Заложить новое поселение",
+    "management-select-structure": "Выбрать строение.",
+    "management-remove-structure": "Удалить строение",
+    "management-structure-note": "Тип строения: {0}\nСейчас принадлежит: {1}\nНаходится: {2}",
+    "management-select-villager": "Выбрать поселенца.",
+    "management-remove-villager": "Удалить поселенца",
+    "management-villager-note": "Имя: {0}\nПрофессия: {1}\nПоследний раз видели здесь: {2}\nМесто работы: {3}\nМесто отдыха: {4}",
+    "management-emtpy": "Поселение пустует.",
+    "management-hire-farmer": "Нанять фермера",
+    "management-hire-shepherd": "Нанять пастуха",
+    "management-hire-trader": "Нанять торговца",
+    "management-hire-smith": "Нанять кузнеца",
+    "management-hire-soldier": "Нанять солдата",
+    "management-hire-herbalist": "Нанять травника",
+    "management-hire-mayor": "Нанять старосту",
+    "management-hire-archer": "Нанять лучника",
+    "management-profession-stats": "Профессия: <strong>{0}</strong>\t Поселенцев: {1}\t Рабочих станций: {2}\n",
+    "management-profession-farmer": "фермер",
+    "management-profession-shepherd": "пастух",
+    "management-profession-trader": "торговец",
+    "management-profession-smith": "кузнец",
+    "management-profession-soldier": "солдат",
+    "management-profession-herbalist": "травник",
+    "management-profession-mayor": "староста",
+    "lives-in": "Место жительства: {0}.\nМесто работы: {1}\nМесто отдыха: {2}",
+    "nowhere": "нигде",
+    "resides-in": "Относится к: {0}.",
+    "nobody": "никто",
+    "everybody": "все",
+    "missing-in-action": "Пропавший без вести",
     "quest-gatherMeatForSeed-title": "Мясо на Семена",
     "quest-gatherMeatForSeed-desc": "Мой рацион питания уж больно скуден последнее время... Знаешь, мы бы могли договориться. Прошу, принесите мне 25 кусков любого вида мяса, а я возмещу вам ваши дары некоторым количеством семян, каких смогу найти.",
     "quest-gatherMeatForSeed-obj": "Мяса Добыто: {0}/25",
