--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -198,72 +198,5 @@
     "quest-healplayersetup-obj": "Gathered horsetail: {0}/12\nGathered stone: {1}/1\nGathered stick: {2}/1\nGathered honeycomb: {3}/2\nGathered cattails: {0}/12",
     "quest-healplayer-title": "A visit at the doc",
     "quest-healplayer-desc": "If you ever take a beating, I am able to take a look at your wounds.",
-    "quest-healplayer-obj": "",
-
-    "Woolhampton": "Woolhampton",
-    "Loxleigh": "Loxleigh",
-    "Blackington": "Blackington",
-    "Henwike": "Henwike",
-    "Northfold": "Northfold",
-    "Hartford": "Hartford",
-    "Eastholm": "Eastholm",
-    "Keldworth": "Keldworth",
-    "Westlea": "Westlea",
-    "Barmarsh": "Barmarsh",
-    "Keldbury": "Keldbury",
-    "Southpool": "Southpool",
-    "Newburgh": "Newburgh",
-    "Otterchester": "Otterchester",
-    "Overmoor": "Overmoor",
-    "Thorndon": "Thorndon",
-    "Oakbury": "Oakbury",
-    "Redhey": "Redhey",
-    "Market": "Market",
-    "Kirhurst": "Kirhurst",
-    "Hazelham": "Hazelham",
-    "Hindburn": "Hindburn",
-    "Northhurst": "Northhurst",
-    "Keldfield": "Keldfield",
-    "Loxdale": "Loxdale",
-    "Redwick": "Redwick",
-    "Woolwell": "Woolwell",
-    "Green": "Green",
-    "Newwick": "Newwick",
-    "Blackwick": "Blackwick",
-    "Thornhalgh": "Thornhalgh",
-    "Oulhall": "Oulhall",
-    "Northdale": "Northdale",
-    "Loxbury": "Loxbury",
-    "Foxden": "Foxden",
-    "Oakmoor": "Oakmoor",
-    "Kinhalgh": "Kinhalgh",
-    "Oakhurst": "Oakhurst",
-    "Guildholm": "Guildholm",
-    "Lower": "Lower",
-    "Northden": "Northden",
-    "Great": "Great",
-    "Hopmere": "Hopmere",
-    "Kinburn": "Kinburn",
-    "Oulholm": "Oulholm",
-    "Marsburn": "Marsburn",
-    "Middleley": "Middleley",
-    "Oakcaster": "Oakcaster",
-    "Lake": "Lake",
-    "Harthey": "Harthey",
-    "Whitemouth": "Whitemouth",
-    "Overwick": "Overwick",
-    "Kinwood": "Kinwood",
-    "Oakport": "Oakport",
-    "Heath": "Heath",
-    "Hartmere": "Hartmere",
-    "Northbury": "Northbury",
-    "Guildhey": "Guildhey",
-    "Ashhall": "Ashhall",
-    "Redport": "Redport",
-    "Little": "Little",
-    "Loxdon": "Loxdon",
-    "Hendon": "Hendon",
-    "Oxthwaite": "Oxthwaite",
-    "Portspool": "Portspool",
-    "Oakfold": "Oakfold"
+    "quest-healplayer-obj": ""
 }
