--- a/resources/assets/vsvillage/lang/de.json
+++ b/resources/assets/vsvillage/lang/de.json
@@ -10,16 +10,32 @@
     "item-creature-humanoid-villager-male-shepherd": "Hirte (männlich)",
     "item-creature-humanoid-villager-female-shepherd": "Hirte (weiblich)",
     "item-creature-humanoid-villager-male-herbalist": "Kräuterkundler (männlich)",
-    "item-creature-humanoid-villager-female-herbalist": "Kräuterhexe (weiblich)",
+    "item-creature-humanoid-villager-female-herbalist": "Kräuterkundler (weiblich)",
     "item-creature-humanoid-villager-male-mayor": "Bürgermeister (männlich)",
     "item-creature-humanoid-villager-female-mayor": "Bürgermeister (weiblich)",
     "item-creature-humanoid-villager-male-trader": "Händler (männlich)",
     "item-creature-humanoid-villager-female-trader": "Händler (weiblich)",
-    
+    "item-dead-creature-humanoid-villager-male-soldier": "Toter Soldat (männlich)",
+    "item-dead-creature-humanoid-villager-female-soldier": "Toter Soldat (weiblich)",
+    "item-dead-creature-humanoid-villager-male-archer": "Toter Bogenschütze (männlich)",
+    "item-dead-creature-humanoid-villager-female-archer": "Toter Bogenschütze (weiblich)",
+    "item-dead-creature-humanoid-villager-male-smith": "Toter Schmied (männlich)",
+    "item-dead-creature-humanoid-villager-female-smith": "Toter Schmied (weiblich)",
+    "item-dead-creature-humanoid-villager-male-farmer": "Toter Bauer (männlich)",
+    "item-dead-creature-humanoid-villager-female-farmer": "Toter Bauer (weiblich)",
+    "item-dead-creature-humanoid-villager-male-shepherd": "Toter Hirte (männlich)",
+    "item-dead-creature-humanoid-villager-female-shepherd": "Toter Hirte (weiblich)",
+    "item-dead-creature-humanoid-villager-male-herbalist": "Toter Kräuterkundler (männlich)",
+    "item-dead-creature-humanoid-villager-female-herbalist": "Toter Kräuterkundler (weiblich)",
+    "item-dead-creature-humanoid-villager-male-mayor": "Toter Bürgermeister (männlich)",
+    "item-dead-creature-humanoid-villager-female-mayor": "Toter Bürgermeister (weiblich)",
+    "item-dead-creature-humanoid-villager-male-trader": "Toter Händler (männlich)",
+    "item-dead-creature-humanoid-villager-female-trader": "Toter Händler (weiblich)",
     "item-villagerhorn": "Beschwörungshorn",
-    "itemdesc-villagerhorn": "Kann verwendet werden, um Hilfe herbeizurufen.",
+    "itemdesc-villagerhorn": "Kann verwendet werden, um Hilfe herbeizurufen",
     "interact-villager-horn": "Lass das Horn ertönen, um einen Dorfbewohner aus der Scherbenwelt zu befreien!",
-
+    "villagerguide-title": "Dörfer und Dorfbewohner",
+    "villagerguide-text": "<strong>Dörfer und Dorfbewohner</strong>\n\nSie können auf Reisen durch die Welt auf Dörfer treffen. Die Menschen, die in diesen Dörfern herumlaufen, sind im Allgemeinen freundlich, solange sie nicht provoziert werden. Einige werden mit dir handeln, andere könnten dich vor bösen Feinden schützen. Die meisten von ihnen werden tagsüber kleine Aufgaben erledigen, abhängig von ihrem Beruf.\n\nEs besteht auch die Möglichkeit, Ihr eigenes Dorf zu gründen. Alles was du brauchst ist, ein <a href=\"handbook://item-vsvillage:villagerhorn\">Horn</a> herzustellen und es zu blasen, um einen Dorfbewohner Händler zu beschwören. Er verkauft alle Gegenstände, die deine Dorfbewohner brauchen werden, wie Arbeitsplätze und Betten, um sie zu sammeln. Der Bürgermeister-Werkbank sollte der erste Block sein, den Sie kaufen.\n\n Wenn Sie <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a> installiert haben, können Sie sogar Missionen verschiedener Dorfbewohner akzeptieren. \n\nSobald du ein paar Dorfbewohner beschworen hast, musst du ihnen Unterschlupf bieten. Jeder Dorfbewohner möchte ein Bett zum Schlafen während der Nacht und eine <a href=\"handbooksearch://workstation\">Werkbank</a> haben, um tagsüber beschäftigt zu bleiben.\nDeine Dorfbewohner versammeln sich auch gerne am <a href=\"handbook://block-vsvillage:brazier-extinct\">Feuerplatz</a> am Abend, um sich mit ihnen zu unterhalten.",
     "block-workstation-soldier-*": "Werkbank (Soldat)",
     "block-workstation-smith-*": "Werkbank (Schmied)",
     "block-workstation-farmer-*": "Werkbank (Bauer)",
@@ -27,6 +43,10 @@
     "block-workstation-herbalist-*": "Werkbank (Kräuterkundler)",
     "block-workstation-mayor-*": "Werkbank (Bürgermeister)",
     "block-workstation-trader-*": "Werkbank (Händler)",
-
-    "block-brazier-*": "Feuerstelle"
+    "block-villagebed-*": "Dorfbewohnerbett",
+    "block-brazier-*": "Kohlebecken",
+    "block-waypoint": "Wegpunkt",
+    "command-stay": "Hier bleiben!",
+    "command-follow": "Folge mir!",
+    "manage-village": "Dorf verwalten"
 }
