--- a/resources/assets/vsvillage/lang/de.json
+++ b/resources/assets/vsvillage/lang/de.json
@@ -48,5 +48,206 @@
     "block-waypoint": "Wegpunkt",
     "command-stay": "Hier bleiben!",
     "command-follow": "Folge mir!",
-    "manage-village": "Dorf verwalten"
+    "manage-village": "Dorf verwalten",
+    "management-title": "Dorfverwaltung",
+    "tab-management-residents": "Bewohner",
+    "tab-management-structures": "Strukturen",
+    "tab-management-stats": "Statistiken",
+    "tab-management-destroy": "Zerstören",
+    "tab-management-hire": "Anheuern",
+    "management-destroy-village-text": "Bist du sicher, dass du dieses Dorf dauerhaft zerstören möchtest?",
+    "management-destroy-village-button": "Dorf zerstören",
+    "management-update-village-button": "Dorf verbessern",
+    "management-no-village-found": "Dieser Block ist derzeit nicht mit einem Dorf verbunden. Möchtest du ein neues gründen?",
+    "management-village-name": "Name:",
+    "management-village-radius": "Radius:",
+    "management-found-new-village": "Neues Dorf gründen",
+    "management-select-structure": "Struktur auswählen.",
+    "management-remove-structure": "Struktur entfernen",
+    "management-structure-note": "Strukturtyp: {0}\nDerzeit im Besitz von {1}\nBefindet sich in: {2}",
+    "management-select-villager": "Dorfbewohner auswählen.",
+    "management-remove-villager": "Dorfbewohner entlassen",
+    "management-villager-note": "Name: {0}\nBeruf: {1}\nZuletzt gesehen in: {2}\nArbeitet bei: {3}\nSchläft bei: {4}",
+    "management-emtpy": "Das Dorf scheint leer zu sein.",
+    "management-hire-farmer": "Bauer einstellen",
+    "management-hire-shepherd": "Hirte einstellen",
+    "management-hire-trader": "Händler einstellen",
+    "management-hire-smith": "Schmied einstellen",
+    "management-hire-soldier": "Soldat einstellen",
+    "management-hire-herbalist": "Kräuterkundler einstellen",
+    "management-hire-mayor": "Bürgermeister einstellen",
+    "management-hire-archer": "Bogenschütze einstellen",
+    "management-poi-stats": "Das Dorf hat insgesamt <strong>{0} Betten</strong>, <strong>{1} Arbeitsstationen</strong> und <strong>{2} Sammelplätze</strong>.\nEs ist die Heimat von <strong>{3} Dorfbewohnern</strong>.\nDie Dorfbewohner und Arbeitsstationen sind wie folgt aufgeteilt:\n",
+    "management-profession-stats": "Beruf: <strong>{0}</strong>\t Dorfbewohner: {1}\t Werkbank: {2}\n",
+    "management-profession-farmer": "Bauer",
+    "management-profession-shepherd": "Hirte",
+    "management-profession-trader": "Händler",
+    "management-profession-smith": "Schmied",
+    "management-profession-soldier": "Soldat",
+    "management-profession-herbalist": "Kräuterkundler",
+    "management-profession-mayor": "Bürgermeister",
+    "lives-in": "Bewohner von {0}.\nArbeitet bei: {1}\nSchläft bei: {2}",
+    "nowhere": "nirgendwo",
+    "resides-in": "Besitzt von {0}.",
+    "nobody": "niemand",
+    "everybody": "alle",
+    "missing-in-action": "Vermisst im Einsatz",
+    "quest-gatherMeatForSeed-title": "Fleisch für Samen",
+    "quest-gatherMeatForSeed-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 25 Fleisch jeglicher Art bringst, könnte ich dir einige Samen im Austausch anbieten.",
+    "quest-gatherMeatForSeed-obj": "Gesammeltes Fleisch: {0}/25",
+    "quest-gatherMeatForGrain-title": "Gewinn über Getreide",
+    "quest-gatherMeatForGrain-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 20 Fleisch jeglicher Art bringst, könnte ich dir im Austausch etwas Getreide anbieten.",
+    "quest-gatherMeatForGrain-obj": "Gesammeltes Fleisch: {0}/20",
+    "quest-gather10MeatFor4FlaxSeeds-title": "Es gibt kein Protein in Flachsfasern",
+    "quest-gather10MeatFor4FlaxSeeds-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 10 Fleisch jeglicher Art bringst, könnte ich dir einige Samen im Austausch anbieten.",
+    "quest-gather10MeatFor4FlaxSeeds-obj": "Gesammeltes Fleisch: {0}/10",
+    "quest-gather10MeatFor4ParsnipSeeds-title": "Es gibt kein Protein in Pastinaken",
+    "quest-gather10MeatFor4ParsnipSeeds-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 10 Fleisch jeglicher Art bringst, könnte ich dir einige Samen im Austausch anbieten.",
+    "quest-gather10MeatFor4ParsnipSeeds-obj": "Gesammeltes Fleisch: {0}/10\"",
+    "quest-gather10MeatFor4TurnipSeeds-title": "Es gibt kein Protein in Rüben",
+    "quest-gather10MeatFor4TurnipSeeds-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 10 Fleisch jeglicher Art bringst, könnte ich dir etwas im Austausch anbieten.",
+    "quest-gather10MeatFor4TurnipSeeds-obj": "Gesammeltes Fleisch: {0}/10\"",
+    "quest-gather10MeatFor4CarrotSeeds-title": "Es gibt kein Protein in Karotten",
+    "quest-gather10MeatFor4CarrotSeeds-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 10 Fleisch jeglicher Art bringst, könnte ich dir einige Samen im Austausch anbieten.",
+    "quest-gather10MeatFor4CarrotSeeds-obj": "Gesammeltes Fleisch: {0}/10",
+    "quest-gather10MeatFor4OnionSeeds-title": "Es gibt kein Protein in Zwiebeln",
+    "quest-gather10MeatFor4OnionSeeds-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 10 Fleisch jeglicher Art bringst, könnte ich dir einige Samen im Austausch anbieten.",
+    "quest-gather10MeatFor4OnionSeeds-obj": "Gesammeltes Fleisch: {0}/10",
+    "quest-gather10MeatFor4SpeltSeeds-title": "Es gibt kein Protein im Getreide",
+    "quest-gather10MeatFor4SpeltSeeds-desc": "Meine Ernährung könnte ein wenig mehr Abwechslung gebrauchen. Wenn du mir 10 Fleisch jeglicher Art bringst, könnte ich dir einige Samen im Austausch anbieten.",
+    "quest-gather10MeatFor4SpeltSeeds-obj": "Gesammeltes Fleisch: {0}/10",
+    "quest-cull2HaresFor20Carrots-title": "Hasen Problem",
+    "quest-cull2HaresFor20Carrots-desc": "Diese schrecklichen Hasen fressen meine Ernte. Bekämpfe sie und ich teile einige Karotten mit dir.",
+    "quest-cull2HaresFor20Carrots-obj": "Getötete Hasen: {0}/2",
+    "quest-cull2HaresFor20Spelt-title": "Hasen Problem",
+    "quest-cull2HaresFor20Spelt-desc": "Diese schrecklichen Hasen fressen meine Ernte. Bekämpfe sie und ich teile einige Dinkelkörner mit dir.",
+    "quest-cull2HaresFor20Spelt-obj": "Getötete Hasen: {0}/2",
+    "quest-sell1CheesewheelFor4Gears-title": "Würde gerne Käse für mein Brot haben",
+    "quest-sell1CheesewheelFor4Gears-desc": "Ich habe einige Zahnräder mit einem durchreisenden Reisenden getauscht. Ich würde gerne Käse von dir kaufen, wenn du eine Scheibe übrig hast.",
+    "quest-sell1CheesewheelFor4Gears-obj": "Gesammelte Käsescheibe: {0}/1",
+    "quest-gather12CharcoalFor4Gears-title": "Der Schmiede bleibt heute kalt",
+    "quest-gather12CharcoalFor4Gears-desc": "Ich möchte einige neue Eisenwerkzeuge herstellen, aber ich habe vergessen, die Holzkohle vorzubereiten. Kannst du mir helfen, etwas Kohle für mich zu sammeln? Ich könnte dir bezahlen.",
+    "quest-gather12CharcoalFor4Gears-obj": "Gesammelte Holzkohle: {0}/12",
+    "quest-buy1BlackGuardSword-title": "Erstellen einer Waffe von großer Macht",
+    "quest-buy1BlackGuardSword-desc": "Wenn du mir die Materialien sowie eine Zahlung für meine Arbeit gibst, könnte ich eine Waffe von außergewöhnlicher Qualität für dich erschaffen.",
+    "quest-buy1BlackGuardSword-obj": "Gesammelte Eisenbarren: {0}/1\nGesammelte Holzkohle: {1}/1\nGesammelte Rostige Zahnräder: {2}/4",
+    "quest-upgradeGambison-title": "Upgrade deines Gambeson",
+    "quest-upgradeGambison-desc": "Mit Bezahlung und einem Gambeson-Set könnte ich es so anpassen, dass es besser zu Ihnen passt, denke ich.",
+    "quest-upgradeGambison-obj": "Gambesonkopf: {0}/1\nGambesonrüstung: {1}/1\nGambesonhose: {2}/1\nGesammelte rostige Zahnräder: {3}/32",
+    "quest-gather16HayFor1BlueCheesewheel-title": "Heu für Blauschimmelkäse",
+    "quest-gather16HayFor1BlueCheesewheel-desc": "Ich brauche Hilfe beim Sammeln von Heu für Vieh, sammle 16 davon und ich teile etwas Käse aus meinem Vorrat.",
+    "quest-gather16HayFor1BlueCheesewheel-obj": "Gesammeltes Heu: {0}/16",
+    "quest-gather16HayFor1CheddarCheesewheel-title": "Heu für Cheddar Käse",
+    "quest-gather16HayFor1CheddarCheesewheel-desc": "Ich brauche Hilfe beim Sammeln von Heu für Vieh, sammle 16 davon und ich teile etwas Käse aus meinem Vorrat.",
+    "quest-gather16HayFor1CheddarCheesewheel-obj": "Gesammeltes Heu: {0}/16",
+    "quest-gather6GrainFor12Eggs-title": "Getreide für ein Dutzend Eier",
+    "quest-gather6GrainFor12Eggs-desc": "Meine Hennen brauchen mehr Getreide, um die Anzahl der Eier, die sie legen, zu halten. Ich gebe dir gerne ein Dutzend Eier für etwas Getreide.",
+    "quest-gather6GrainFor12Eggs-obj": "Gesammeltes Getreide: {0}/6",
+    "quest-gather24GrainFor18Poultry-title": "Getreide für Hühnerfleisch",
+    "quest-gather24GrainFor18Poultry-desc": "Meine Hühner sind alt und fett geworden. Ich muss Platz für die jüngeren Generationen schaffen, damit sie richtig wachsen können. Für etwas einfaches Getreide kann ich Ihnen etwas Fleisch anbieten.",
+    "quest-gather24GrainFor18Poultry-obj": "Gesammeltes Getreide: {0}/24",
+    "quest-gather24GrainFor18Redmeat-title": "Getreide für rotes Fleisch",
+    "quest-gather24GrainFor18Redmeat-desc": "Meine Schafe sind alt und fett geworden. Ich muss Platz für die jüngeren Generationen schaffen, damit sie richtig wachsen können. Für etwas einfaches Getreide kann ich Ihnen etwas Fleisch anbieten.",
+    "quest-gather24GrainFor18Redmeat-obj": "Gesammeltes Getreide: {0}/24",
+    "quest-kill2WolvesFor8Gears-title": "Schutz des Viehs",
+    "quest-kill2WolvesFor8Gears-desc": "Die Wölfe verlieren ihren Respekt vor dem Feuer. Sie kommen immer näher am Vieh, das ich hüte. Ich kann dich entschädigen, wenn du sie abwehrst.",
+    "quest-kill2WolvesFor8Gears-obj": "Getötete Wölfe: {0}/2",
+    "quest-kill3FoxesFor8Gear-title": "Schutz der Hühner",
+    "quest-kill3FoxesFor8Gear-desc": "Vor kurzem ist ein Fuchs in meinen Hühnerstall eingebrochen und hat meine Tiere dezimiert. Ich möchte nicht, dass so etwas wieder passiert. Wenn jemand in der Lage ist, drei dieser Füchse zu jagen, wäre ich bereit, Zahnräder als Bezahlung anzubieten.",
+    "quest-kill3FoxesFor8Gear-obj": "Getötete Füchse: {0}/3",
+    "quest-kill50DriftersFor20Gears-title": "Schauer aus einer anderen Welt",
+    "quest-kill50DriftersFor20Gears-desc": "Der Wald ist einfach nicht mehr sicher. Drifter sind überall. Wenn du das umliegende Gebiet von Driftern befreien könntest, könnten wir dir einen fairen Preis bezahlen.",
+    "quest-kill50DriftersFor20Gears-obj": "Getötete Drifter: {0}/50",
+    "quest-kill2NightmareDriftersFor12Gears-title": "Das Knurren aus den unaussprechlichen Tiefen",
+    "quest-kill2NightmareDriftersFor12Gears-desc": "Wir können keine Mineralien mehr aus den Bergen gewinnen, wegen der Kreaturen, die in den tiefen Höhlen lauern. Wir wären bereit, einen großzügigen Preis zu zahlen für jeden, der hilft, die Albtraum Drifter aus den Tiefen zu vertreiben.",
+    "quest-kill2NightmareDriftersFor12Gears-obj": "Getötete Albtraum Drifter: {0}/2",
+    "quest-recruitvillager-title": "Zu Ihren Diensten",
+    "quest-recruitvillager-desc": "Für eine kleine Menge an Zahnrädern kann ich dich einen Tag lang begleiten und schützen.",
+    "quest-recruitvillager-obj": "Rostige Zahnräder: {0}/2",
+    "quest-repairingAnOldSet1-title": "Eine neue Kupfernadel",
+    "quest-repairingAnOldSet1-desc": "Ich brauche einen Kupferbarren für eine neue medizinische Nadel. Ich habe ein altes Rüstungsset, das ich dir Stück für Stück geben kann, wenn du weiter mit mir zusammenarbeitest.",
+    "quest-repairingAnOldSet1-obj": "Gesammelte Kupferbarren {0}/1",
+    "quest-repairingAnOldSet2-title": "Flachsschnur für Löcher",
+    "quest-repairingAnOldSet2-desc": "Ich brauche etwas Flachsschnur, um Verbände herzustellen und das Loch in diesem Rüstungsset zu reparieren, das ich dir gebe.",
+    "quest-repairingAnOldSet2-obj": "Gesammelte Flachsschnur {0}/12",
+    "quest-repairingAnOldSet3-title": "Lebensmittel für den Winter",
+    "quest-repairingAnOldSet3-desc": "Wenn du mir Lebensmittel für den Winter bringen kannst, werde ich dir das letzte Stück der Rüstung geben, das ich habe.",
+    "quest-repairingAnOldSet3-obj": "Gesammeltes Gemüse {0}/32",
+    "quest-sell24HorsetailFor3Gears-title": "Bedarf an Schachtelhalm",
+    "quest-sell24HorsetailFor3Gears-desc": "Die Vorräte gehen zur Neige und ich brauche mehr Schachtelhalm, ich kann natürlich bezahlen.",
+    "quest-sell24HorsetailFor3Gears-obj": "Gesammelter Schachtelhalm: {0}/24",
+    "quest-sell10PowderedSulfurFor2Gears-title": "Bedarf an Schwefelpulver",
+    "quest-sell10PowderedSulfurFor2Gears-desc": "Die Vorräte gehen zur Neige und ich brauche mehr Schwefelpulver, ich kann natürlich bezahlen.",
+    "quest-sell10PowderedSulfurFor2Gears-obj": "Gesammeltes Schwefelpulver: {0}/10",
+    "quest-healplayersetup-title": "Versorgungsaufbau vor der Heilung",
+    "quest-healplayersetup-desc": "Um als dein Heiler fungieren zu können, benötige ich einige grundlegende Dinge: Material für Verbände, einen Stein und einen Stock zum Zerquetschen von Kräutern sowie Bienenwaben zur Behandlung von Wunden. Nachdem du mir diese Startmaterialien besorgt hast, kann ich selbstständig werden.",
+    "quest-healplayersetup-obj": "Gesammelter Schachtelhalm: {0}/12\nGesammelter Stein: {1}/1\nGesammelter Stock: {2}/1\nGesammelte Bienenwaben: {3}/2\nGesammelte Rohrkolben: {4}/12",
+    "quest-healplayer-title": "Ein Besuch beim Arzt",
+    "quest-healplayer-desc": "Wenn du jemals verletzt wirst, kann ich mir deine Wunden ansehen.",
+    "Woolhampton": "Woolhampton",
+    "Loxleigh": "Loxleigh",
+    "Blackington": "Blacktington",
+    "Henwike": "Henwike",
+    "Northfold": "Northfold",
+    "Hartford": "Hartford",
+    "Eastholm": "Eastholm",
+    "Keldworth": "Keldworth",
+    "Westlea": "Westlea",
+    "Barmarsh": "Barmarsh",
+    "Keldbury": "Keldbury",
+    "Southpool": "Southpool",
+    "Newburgh": "Newburgh",
+    "Otterchester": "Otterchester",
+    "Overmoor": "Overmoor",
+    "Thorndon": "Thorndon",
+    "Oakbury": "Oakbury",
+    "Redhey": "Redhey",
+    "Market": "Market",
+    "Kirhurst": "Kirhurst",
+    "Hazelham": "Hazelham",
+    "Hindburn": "Hindburn",
+    "Northhurst": "Northhurst",
+    "Keldfield": "Keldfield",
+    "Loxdale": "Loxdale",
+    "Redwick": "Redwick",
+    "Woolwell": "Woolwell",
+    "Green": "Green",
+    "Newwick": "Newwick",
+    "Blackwick": "Blackwick",
+    "Thornhalgh": "Thornhalgh",
+    "Oulhall": "Oulhall",
+    "Northdale": "Northdale",
+    "Loxbury": "Loxbury",
+    "Foxden": "Foxden",
+    "Oakmoor": "Oakmoor",
+    "Kinhalgh": "Kinhalgh",
+    "Oakhurst": "Oakhurst",
+    "Guildholm": "Guildholm",
+    "Lower": "Lower",
+    "Northden": "Northden",
+    "Great": "Great",
+    "Hopmere": "Hopmere",
+    "Kinburn": "Kinburn",
+    "Oulholm": "Oulholm",
+    "Marsburn": "Marsburn",
+    "Middleley": "Middleley",
+    "Oakcaster": "Oakcaster",
+    "Lake": "Lake",
+    "Harthey": "Harthey",
+    "Whitemouth": "Whitemouth",
+    "Overwick": "Overwick",
+    "Kinwood": "Kinwood",
+    "Oakport": "Oakport",
+    "Heath": "Heath",
+    "Hartmere": "Hartmere",
+    "Northbury": "Northbury",
+    "Guildhey": "Guildhey",
+    "Ashhall": "Ashhall",
+    "Redport": "Redport",
+    "Little": "Little",
+    "Loxdon": "Loxdon",
+    "Hendon": "Hendon",
+    "Oxthwaite": "Oxthwaite",
+    "Portspool": "Portspool",
+    "Oakfold": "Oakfold"
 }
