Can place villager in creative mode. Some errors still present

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -63,7 +63,7 @@
     "tab-management-hire": "Hire",
     "management-destroy-village-text": "Are you sure to permanently destroy this village?",
     "management-destroy-village-button": "Destroy village",
-    "management-update-village-button": "Upate village",
+    "management-update-village-button": "Update village",
     "management-no-village-found": "This block is currently not connected to a village. Do you want to found a new one?",
     "management-village-name": "Name:",
     "management-village-radius": "Radius:",
