--- a/resources/assets/vsvillage/lang/de.json
+++ b/resources/assets/vsvillage/lang/de.json
@@ -87,8 +87,10 @@
     "management-profession-herbalist": "Kräuterkundler",
     "management-profession-mayor": "Bürgermeister",
     "lives-in": "Bewohner von {0}.\nArbeitet bei: {1}\nSchläft bei: {2}",
+    "lives-in-debug": "Bewohner von {0}.\nArbeitet bei: {1}\nSchläft bei: {2}",
     "nowhere": "nirgendwo",
     "resides-in": "Besitzt von {0}.",
+    "owned-by": "Im Besitz von {0}.",
     "nobody": "niemand",
     "everybody": "alle",
     "missing-in-action": "Vermisst im Einsatz",
@@ -183,71 +185,5 @@
     "quest-healplayersetup-desc": "Um als dein Heiler fungieren zu können, benötige ich einige grundlegende Dinge: Material für Verbände, einen Stein und einen Stock zum Zerquetschen von Kräutern sowie Bienenwaben zur Behandlung von Wunden. Nachdem du mir diese Startmaterialien besorgt hast, kann ich selbstständig werden.",
     "quest-healplayersetup-obj": "Gesammelter Schachtelhalm: {0}/12\nGesammelter Stein: {1}/1\nGesammelter Stock: {2}/1\nGesammelte Bienenwaben: {3}/2\nGesammelte Rohrkolben: {4}/12",
     "quest-healplayer-title": "Ein Besuch beim Arzt",
-    "quest-healplayer-desc": "Wenn du jemals verletzt wirst, kann ich mir deine Wunden ansehen.",
-    "Woolhampton": "Woolhampton",
-    "Loxleigh": "Loxleigh",
-    "Blackington": "Blacktington",
-    "Henwike": "Henwike",
-    "Northfold": "Northfold",
-    "Hartford": "Hartford",
-    "Eastholm": "Eastholm",
-    "Keldworth": "Keldworth",
-    "Westlea": "Westlea",
-    "Barmarsh": "Barmarsh",
-    "Keldbury": "Keldbury",
-    "Southpool": "Southpool",
-    "Newburgh": "Newburgh",
-    "Otterchester": "Otterchester",
-    "Overmoor": "Overmoor",
-    "Thorndon": "Thorndon",
-    "Oakbury": "Oakbury",
-    "Redhey": "Redhey",
-    "Market": "Market",
-    "Kirhurst": "Kirhurst",
-    "Hazelham": "Hazelham",
-    "Hindburn": "Hindburn",
-    "Northhurst": "Northhurst",
-    "Keldfield": "Keldfield",
-    "Loxdale": "Loxdale",
-    "Redwick": "Redwick",
-    "Woolwell": "Woolwell",
-    "Green": "Green",
-    "Newwick": "Newwick",
-    "Blackwick": "Blackwick",
-    "Thornhalgh": "Thornhalgh",
-    "Oulhall": "Oulhall",
-    "Northdale": "Northdale",
-    "Loxbury": "Loxbury",
-    "Foxden": "Foxden",
-    "Oakmoor": "Oakmoor",
-    "Kinhalgh": "Kinhalgh",
-    "Oakhurst": "Oakhurst",
-    "Guildholm": "Guildholm",
-    "Lower": "Lower",
-    "Northden": "Northden",
-    "Great": "Great",
-    "Hopmere": "Hopmere",
-    "Kinburn": "Kinburn",
-    "Oulholm": "Oulholm",
-    "Marsburn": "Marsburn",
-    "Middleley": "Middleley",
-    "Oakcaster": "Oakcaster",
-    "Lake": "Lake",
-    "Harthey": "Harthey",
-    "Whitemouth": "Whitemouth",
-    "Overwick": "Overwick",
-    "Kinwood": "Kinwood",
-    "Oakport": "Oakport",
-    "Heath": "Heath",
-    "Hartmere": "Hartmere",
-    "Northbury": "Northbury",
-    "Guildhey": "Guildhey",
-    "Ashhall": "Ashhall",
-    "Redport": "Redport",
-    "Little": "Little",
-    "Loxdon": "Loxdon",
-    "Hendon": "Hendon",
-    "Oxthwaite": "Oxthwaite",
-    "Portspool": "Portspool",
-    "Oakfold": "Oakfold"
+    "quest-healplayer-desc": "Wenn du jemals verletzt wirst, kann ich mir deine Wunden ansehen."
 }
