--- a/resources/assets/vsvillage/lang/fr.json
+++ b/resources/assets/vsvillage/lang/fr.json
@@ -35,6 +35,7 @@
     "itemdesc-villagerhorn": "Peut être utilisé pour appeler de l'aide",
     "interact-villager-horn": "Visez le sol à proximité et frappez-le pour demander de l'aide en libérant un villageois du monde de la rouille !",
     "villagerguide-title": "Villages et villageois",
+    "villagerguide-text": "<strong>Villages et Villageois</strong>\n\nVous pouvez rencontrer des villages en voyageant dans le monde entier. Les habitants de ces villages sont généralement amicaux tant qu'ils ne sont pas provoqués. Certains feront du commerce avec vous, d'autres pourront vous protéger contre des ennemis malveillants. La plupart d'entre eux effectuent de petites tâches au cours de la journée, en fonction de leur profession.\n\nIl est également possible de fonder son propre village. Il vous suffit de fabriquer une <a href=\"handbook://item-vsvillage:villagerhorn\">corne</a> et de souffler dedans pour appeler un commerçant villageois. Il vend tous les objets dont vos villageois auront besoin, comme des postes de travail, des lits et un brasero pour se rassembler. Le poste de travail du maire devrait être le premier bloc que vous achetez.\n\n Si vous avez installé <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a>, vous pourrez même accepter des missions de la part de divers villageois. \n\nUne fois que vous aurez convoqué quelques villageois, vous devrez leur fournir un abri. Chaque villageois veut avoir un lit pour dormir la nuit et un <a href=\"handbooksearch://workstation\">poste de travail</a> pour s'occuper la journée.\nVos villageois aiment aussi se réunir autour d'un <a href=\"handbook://block-vsvillage:brazier-extinct\">feu</a> le soir pour se rencontrer.\n\nPour se repérer, les villageois utilisent les <a href=\"handbook://block-vsvillage:waypoint\">. Vous pouvez en placer à l'intérieur de votre village pour les aider à se déplacer. Pour savoir s'ils sont correctement connectés les uns aux autres, tapez /highlightvillagewaypoints et voyez si le chemin entre eux s'allume. Les waypoints n'essaieront de se connecter que s'ils sont distants de moins de 50 blocs et s'ils sont reliés par des blocs de chemin ou des blocs de terre.",
     "block-workstation-soldier-*": "Station de travail (soldat)",
     "block-workstation-smith-*": "Station de travail (forgeron)",
     "block-workstation-farmer-*": "Station de travail (fermier)",
@@ -42,9 +43,57 @@
     "block-workstation-herbalist-*": "Station de travail (herboriste)",
     "block-workstation-mayor-*": "Station de travail (maire)",
     "block-workstation-trader-*": "Station de travail (marchand)",
+    "block-villagebed-*": "Lit de villageois",
     "block-brazier-*": "Brasier",
+    "block-waypoint": "Repère",
     "command-stay": "Restez ici !",
     "command-follow": "Suivez-moi !",
+    "manage-village": "Gérer le village",
+    "management-title": "Gestion du village",
+    "tab-management-residents": "Habitants",
+    "tab-management-structures": "Structures",
+    "tab-management-stats": "Statistiques",
+    "tab-management-destroy": "Détruire",
+    "tab-management-hire": "Engager",
+    "management-destroy-village-text": "Êtes-vous sûr de vouloir détruire définitivement ce village ?",
+    "management-destroy-village-button": "Détruire le village",
+    "management-update-village-button": "Mise à jour du village",
+    "management-no-village-found": "Ce bloc n'est actuellement connecté à aucun village. Voulez-vous en trouver un nouveau ?",
+    "management-village-name": "Nom :",
+    "management-village-radius": "Rayon :",
+    "management-found-new-village": "Nouveau village trouvé",
+    "management-select-structure": "Sélectionnez une structure.",
+    "management-remove-structure": "Retirer la structure",
+    "management-structure-note": "Type de structure : {0}\nActuellement détenu par {1}\nSitué à : {2}",
+    "management-select-villager": "Sélectionnez un villageois.",
+    "management-remove-villager": "Retirer le villageois",
+    "management-villager-note": "Nom : {0}\nProfession : {1}\nVu la dernière fois à : {2}\nTravaille à : {3}\nDort à : {4}",
+    "management-emtpy": "Le village semble être vide.",
+    "management-hire-farmer": "Embaucher un fermier",
+    "management-hire-shepherd": "Embaucher un berger",
+    "management-hire-trader": "Embaucher un marchand",
+    "management-hire-smith": "Embaucher un forgeron",
+    "management-hire-soldier": "Embaucher un soldat",
+    "management-hire-herbalist": "Embaucher un herboriste",
+    "management-hire-mayor": "Embaucher un maire",
+    "management-hire-archer": "Embaucher un archer",
+    "management-poi-stats": "Ce village dispose d'un total de <strong>{0} lit(s)</strong>, de <strong>{1} poste(s) de travail</strong> et de <strong>{2} lieu(x) de rassemblement</strong>.\nC'est la résidence de <strong>{3} villageois</strong>.\nLes villageois et les postes de travail sont répartis de la manière suivante :\n",
+    "management-profession-stats": "Profession : <strong>{0}</strong>\t Villageois : {1}\t Postes de travail : {2}\n",
+    "management-profession-farmer": "fermier",
+    "management-profession-shepherd": "berger",
+    "management-profession-trader": "marchand",
+    "management-profession-smith": "forgeron",
+    "management-profession-soldier": "soldat",
+    "management-profession-herbalist": "herboriste",
+    "management-profession-mayor": "maire",
+    "lives-in": "Résident de {0}.",
+    "lives-in-debug": "Résident de {0}.\nTravaille à : {1}\nDort à : {2}",
+    "nowhere": "nul part",
+    "resides-in": "Appartient à {0}.",
+    "owned-by": "Possédé par {0}.",
+    "nobody": "personne",
+    "everybody": "tout le monde",
+    "missing-in-action": "Disparu au combat",
     "quest-gatherMeatForSeed-title": "De la viande pour des semences",
     "quest-gatherMeatForSeed-desc": "Mon régime alimentaire pourrait être un peu plus varié. Si vous me fournissez 25 viandes, quelles qu'elles soient, je pourrais vous offrir des semences en échange.",
     "quest-gatherMeatForSeed-obj": "Viande obtenue : {0}/25",
